# load_of_study

./: LICENSE  README.md
embeden/stm32/example_stm32f10x/project/: template.uvguix.姜  template.uvoptx  template.uvprojx
embeden/stm32/example_stm32f10x/user/: bsp_dma.c  bsp_dma.h  bsp_exti.c  bsp_exti.h  bsp_i2c.c  bsp_i2c.h  bsp_key.c  bsp_key.h  bsp_led.c  bsp_led.h  bsp_spi.c  bsp_spi.h  bsp_systick.c  bsp_systick.h  bsp_usart.c  bsp_usart.h  main.c  stm32f10x_it.c
embeden/stm32/example_stm32f10x/user/fatfs/: diskio.c  ff.c  ffconf.h  integer.h
hardware/project/: ProPrj_51单片机核心板_2025-02-26.epro  ProPrj_51单片机核心板_2025-03-03.epro
toolDemo/helloWorld-vscode-msvc/: main.cpp
toolDemo/helloWorld-vscode-msvc-cmake/: CMakeLists.txt  CMakePresets.json
toolDemo/helloWorld-vscode-msvc-cmake/depend/include/mysql/: mysql.h
toolDemo/helloWorld-vscode-msvc-cmake/src/: main.cpp
toolDemo/helloWorld-vscode-msvc-cmake/src/algorithm/: basic.cpp  basic.h
